--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2 id="info">
                 Basic Info:
             </h2>
-            <img src="https://t3.ftcdn.net/jpg/03/46/83/96/360_F_346839683_6nAPzbhpSkIpb8pmAwufkC7c5eD7wYws.jpg" width="200px">
+            <img src="pfp.jpg" width="200px">
             <p>My name is Siddeeq Rasheed. I'm a senior at St. John's University majoring in Computer Science.</p>
         </div>
         <div>
@@ -130,7 +130,7 @@
                     <a href="https://peachtreeoath.itch.io/bust-a-loop" target="_blank">Bust-a-Loop</a> is a game about practicing fighting game combos, particularly loops (a series of the same moves strung together repeatedly in a combo).
                 </li>
                 <li>
-                    <a href="https://noclip.website" target = "_blank">noclip.website</a> is a digital museum of video game levels.
+                    <a href="https://noclip.website" target= "_blank">noclip.website</a> is a digital museum of video game levels.
                 </li>
             </ul>
             <p>Share any of your favorite websites here:
@@ -148,7 +148,7 @@
             </h2>
             <ol>
                 <li>
-                    Profile Page: 
+                    <a href="https://srasheed1018.github.io/CUS1172_SiddeeqRasheed_Public" target = "_blank">Online Profile Page</a>
                 </li>
             </ol>
         </div>
