--- a/Project1_Milestone2/index.html
+++ b/Project1_Milestone2/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/profileStyle.css">
+        <link rel="stylesheet" href="css/profileStyleMobile.css">
 
         <title>
             Siddeeq's Profile
